# coffee_hack

./: README.md  hakaton Ж.ipynb  hakaton_M.ipynb  metrics.ipynb  metrics_1.ipynb
api/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  rebuild_container.ps1  rebuild_container.sh  requirements.txt
api/analysis/: funcs.py  prepare.py  rfm.py
api/src/coffee_hack_api/: main.py
api/src/coffee_hack_api/analysis/: customer_common.py  customer_metrics.py  prepare.py  products_most_relevant.py  rfm.py
frontend-baggins/: package-lock.json  package.json
frontend-baggins/json_proba/: df_hours.json  df_hours_9172.json  df_week.json  df_week_9172.json  js_day.json  js_year.json  most_popular_df_json.json  most_popular_entity_for_customer.json
frontend-baggins/public/: index.html
frontend-baggins/src/: App.css  App.js
frontend-baggins/src/pages/: aaaaaaaaaaaaaaaaaaaaa.jsx  analisPage.jsx  mainPage.jsx  oneUserPage.jsx  usersPage.jsx
